samples/_failures_safe/1761423081_ded18c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_af92edcf.c: In function ‘main’:
./samples/SAFE/__tmp_af92edcf.c:140:24: error: missing terminating ' character
  140 |         if (line[0] == '\0
      |                        ^~~
./samples/SAFE/__tmp_af92edcf.c:140:9: error: expected expression at end of input
  140 |         if (line[0] == '\0
      |         ^~
./samples/SAFE/__tmp_af92edcf.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_af92edcf.c:140:9: error: expected declaration or statement at end of input
